finished readme & analysis

--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], dtype=int64)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "0.9520479254722232"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "       [   56,   563]], dtype=int64)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,23 +604,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting imblearn\n",
-      "  Downloading imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
+      "Requirement already satisfied: imblearn in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (0.0)\n",
       "Requirement already satisfied: imbalanced-learn in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imblearn) (0.10.1)\n",
-      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imbalanced-learn->imblearn) (1.1.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imbalanced-learn->imblearn) (2.2.0)\n",
       "Requirement already satisfied: scikit-learn>=1.0.2 in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imbalanced-learn->imblearn) (1.2.2)\n",
       "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imbalanced-learn->imblearn) (1.23.5)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imbalanced-learn->imblearn) (1.1.1)\n",
       "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imbalanced-learn->imblearn) (1.10.1)\n",
-      "Installing collected packages: imblearn\n",
-      "Successfully installed imblearn-0.0\n"
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\justi\\anaconda3\\envs\\dev\\lib\\site-packages (from imbalanced-learn->imblearn) (2.2.0)\n"
      ]
     }
    ],
@@ -631,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +657,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +680,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +737,7 @@
        "0.9936781215845847"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +759,7 @@
        "       [    4,   615]], dtype=int64)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +771,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.99      1.00     18765\n",
+      "           1       0.85      0.91      0.88       619\n",
+      "\n",
+      "    accuracy                           0.99     19384\n",
+      "   macro avg       0.92      0.95      0.94     19384\n",
+      "weighted avg       0.99      0.99      0.99     19384\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print original classification report for comparison \n",
+    "print(class_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +817,7 @@
     }
    ],
    "source": [
-    "# Print the classification report for the model\n",
+    "# Print the classification report for the RESAMPLED model #2\n",
     "resample_report = classification_report(y_test, resample_predict)\n",
     "\n",
     "print(resample_report)"
